# cmake-googletest

./: CMakeLists.txt
src/: module.c  module.h
test/: test_module.cpp
